--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,13 @@ ul {
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   max-width: 1438px;
+  margin: 0px auto;
 }
 
 .container {
@@ -54,12 +59,23 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header__menu ul li {
+  padding-bottom: 5px;
+}
+
+.header__menu ul li a {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
   font-size: calc(10px + (18 - 10) * ((100vw - 320px) / (1181 - 320)));
   line-height: 25px;
   color: #FFFFFF;
+}
+
+.header__menu ul li:hover {
+  border-bottom: 2px solid #FFFFFF;
 }
 
 .header__menu-burger {
@@ -73,8 +89,8 @@ body {
   position: absolute;
   top: 0px;
   right: 30px;
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   cursor: pointer;
 }
 
@@ -85,7 +101,7 @@ body {
   position: absolute;
   width: 100%;
   height: 5px;
-  background-color: #7a7415;
+  background-color: #f1f0dc;
   -webkit-transition-duration: 0.25s;
           transition-duration: 0.25s;
 }
@@ -129,13 +145,16 @@ body {
   max-width: 168px;
   width: 100%;
   height: 25px;
+  margin-left: 10px;
+}
+
+.one__phone p a {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
   color: #FFFFFF;
-  margin-left: 10px;
 }
 
 .one button {
@@ -151,6 +170,11 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   margin-left: 16px;
+}
+
+.one button:active {
+  background-color: white;
+  color: black;
 }
 
 .one__title {
@@ -399,6 +423,10 @@ body {
   background-color: #ffffff;
 }
 
+.services-and-prices {
+  position: relative;
+}
+
 .services-and-prices__box-services-and-prices {
   position: relative;
   max-width: 978px;
@@ -446,7 +474,7 @@ body {
   height: 667px;
   position: absolute;
   top: -170px;
-  left: -130.25px;
+  left: 0px;
   opacity: 0.1;
 }
 
@@ -466,7 +494,7 @@ body {
 }
 
 .services-and-prices__box-column-block {
-  min-height: 112px;
+  height: 112px;
   text-align: center;
   font-family: 'Open Sans';
   font-style: normal;
@@ -533,7 +561,7 @@ body {
 }
 
 .services-and-prices__term {
-  height: 49px;
+  min-height: 49px;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
@@ -563,6 +591,11 @@ body {
   line-height: 38px;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+
+.services-and-prices__button button:active {
+  background-color: #FFFFFF;
+  color: #267842;
 }
 
 .objects__title-box {
@@ -595,7 +628,7 @@ body {
 }
 
 .objects__project {
-  width: 641px;
+  max-width: 641px;
   height: 38px;
   font-family: 'Open Sans';
   font-style: normal;
@@ -755,6 +788,11 @@ body {
   color: #FFFFFF;
 }
 
+.order__button button:active {
+  background-color: #FFFFFF;
+  color: #267842;
+}
+
 .order-works {
   position: relative;
 }
@@ -882,6 +920,11 @@ body {
   color: #FFFFFF;
 }
 
+.order-works__button button:active {
+  background-color: #FFFFFF;
+  color: #267842;
+}
+
 .examples__linea {
   width: 261.03px;
   height: 2px;
@@ -910,7 +953,7 @@ body {
 }
 
 .examples__box-order h3 {
-  width: 686px;
+  max-width: 686px;
   height: 95px;
   position: absolute;
   top: 102.5px;
@@ -982,7 +1025,7 @@ body {
 }
 
 .reviews__box-order h2 {
-  min-width: 621px;
+  max-width: 621px;
   width: 100%;
   font-family: 'Open Sans';
   font-style: normal;
@@ -994,7 +1037,7 @@ body {
 }
 
 .reviews__box-order h3 {
-  width: 686px;
+  max-width: 686px;
   height: 95px;
   position: absolute;
   top: 102.5px;
@@ -1097,7 +1140,7 @@ body {
 }
 
 .about__box-order h3 {
-  width: 686px;
+  max-width: 686px;
   height: 95px;
   position: absolute;
   top: 102.5px;
@@ -1197,7 +1240,7 @@ body {
 }
 
 .contacts__box-order h3 {
-  width: 686px;
+  max-width: 686px;
   height: 95px;
   position: absolute;
   top: 102.5px;
@@ -1266,30 +1309,14 @@ body {
   max-width: 480px;
   width: 100%;
   min-height: 487px;
-  border: 1px solid red;
-}
-
-.contacts__block-left-blur {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  max-width: 480px;
-  width: 100%;
-  min-height: 487px;
-  background: linear-gradient(120.99deg, #267842 13.12%, rgba(38, 120, 66, 0.526106) 61.23%, rgba(38, 120, 66, 0.15) 93.12%, rgba(38, 120, 66, 0.2) 106.61%);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  opacity: 0.3;
+  position: relative;
 }
 
 .contacts__block-left-box {
-  width: auto;
-  height: 100%;
-  margin: 0px auto;
+  width: 100%;
+  min-height: 487px;
   text-align: center;
-  position: relative;
   z-index: 2;
-  border: 1px solid red;
 }
 
 .contacts__block-left-box h4 {
@@ -1344,6 +1371,19 @@ body {
   background: #FFFFFF;
 }
 
+.contacts__block-left-blur {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  max-width: 480px;
+  width: 100%;
+  min-height: 487px;
+  background: linear-gradient(120.99deg, #267842 13.12%, rgba(38, 120, 66, 0.526106) 61.23%, rgba(38, 120, 66, 0.15) 93.12%, rgba(38, 120, 66, 0.2) 106.61%);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  opacity: 0.3;
+}
+
 .contacts__block-left-button {
   margin: 30px auto 0px;
   text-align: center;
@@ -1363,16 +1403,22 @@ body {
   color: #FFFFFF;
 }
 
+.contacts__block-left-button button:active {
+  background-color: #FFFFFF;
+  color: #267842;
+}
+
 .contacts__block-right {
-  width: 701px;
+  max-width: 701px;
+  width: 100%;
   min-height: 487px;
   position: relative;
-  padding: 58.5px 144px 209.5px 207.22px;
+  padding: 58px 144px 209px 207px;
 }
 
 .contacts__block-right p {
   max-width: 295px;
-  height: 54px;
+  min-height: 54px;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -1404,7 +1450,7 @@ body {
 
 .contacts__block-right-tel p {
   max-width: 200px;
-  height: 22px;
+  min-height: 22px;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
@@ -1540,6 +1586,11 @@ body {
   color: #FFFFFF;
 }
 
+.footer__button button:active {
+  background-color: #FFFFFF;
+  color: #267842;
+}
+
 .footer__box {
   width: 100%;
   min-height: 198px;
@@ -1579,6 +1630,9 @@ body {
 .footer__tel {
   width: 168px;
   height: 25px;
+}
+
+.footer__tel a {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
@@ -1614,6 +1668,7 @@ body {
     line-height: calc(50px + (74 - 50) * ((100vw - 320px) / (1181 - 320)));
   }
   .why-me__linea {
+    top: 200px;
     left: 0px;
   }
   .why-me__benefits {
@@ -1624,17 +1679,21 @@ body {
     text-align: center;
   }
   .why-me__box-why-me h2 {
-    font-size: calc(80px + (140 - 80) * ((100vw - 320px) / (1181 - 320)));
+    font-size: calc(60px + (140 - 60) * ((100vw - 320px) / (1181 - 320)));
   }
   .why-me__box-why-me h3 {
     font-size: calc(40px + (70 - 40) * ((100vw - 320px) / (1181 - 320)));
+    left: 0px;
+  }
+  .services-and-prices__linea {
+    top: 200px;
     left: 0px;
   }
   .services-and-prices__box-services-and-prices {
     text-align: center;
   }
   .services-and-prices__box-services-and-prices h2 {
-    font-size: calc(50px + (130 - 50) * ((100vw - 320px) / (1181 - 320)));
+    font-size: calc(40px + (130 - 40) * ((100vw - 320px) / (1181 - 320)));
   }
   .services-and-prices__box-services-and-prices h3 {
     font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
@@ -1651,6 +1710,10 @@ body {
     line-height: 95px;
     color: #1B1919;
   }
+  .order__linea {
+    top: 200px;
+    left: 0px;
+  }
   .order__box-order {
     text-align: center;
   }
@@ -1658,18 +1721,18 @@ body {
     font-size: calc(50px + (140 - 50) * ((100vw - 320px) / (1181 - 320)));
   }
   .order__box-order h3 {
-    font-size: calc(40px + (70 - 40) * ((100vw - 320px) / (1181 - 320)));
+    font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
     left: 0px;
   }
   .order-works__title-box h3 {
     max-width: 904.23px;
     width: 100%;
-    height: 190px;
+    height: auto;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: calc(25px + (70 - 25) * ((100vw - 320px) / (1181 - 320)));
-    line-height: 95px;
+    font-size: calc(20px + (70 - 20) * ((100vw - 320px) / (1181 - 320)));
+    line-height: 45px;
     color: #1B1919;
     margin-bottom: 60px;
   }
@@ -1679,6 +1742,10 @@ body {
   .order-works__block-step {
     -ms-flex-pack: distribute;
         justify-content: space-around;
+  }
+  .examples__linea {
+    top: 200px;
+    left: 0px;
   }
   .examples__box-order {
     text-align: center;
@@ -1690,6 +1757,10 @@ body {
     font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
     left: 0px;
   }
+  .reviews__linea {
+    top: 200px;
+    left: 0px;
+  }
   .reviews__box-order {
     text-align: center;
   }
@@ -1698,6 +1769,10 @@ body {
   }
   .reviews__box-order h3 {
     font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
+    left: 0px;
+  }
+  .about__linea {
+    top: 200px;
     left: 0px;
   }
   .about__box-order {
@@ -1741,6 +1816,10 @@ body {
     margin: 70px auto;
     text-align: center;
   }
+  .contacts__linea {
+    top: 200px;
+    left: 0px;
+  }
   .contacts__box-order {
     text-align: center;
   }
@@ -1752,43 +1831,35 @@ body {
     left: 0px;
   }
   .contacts__block-right {
+    padding-top: calc(150px + (58 - 150) * ((100vw - 320px) / (1181 - 320)));
     padding-left: calc(5px + (207 - 5) * ((100vw - 320px) / (1181 - 320)));
     padding-right: calc(2px + (144 - 2) * ((100vw - 320px) / (1181 - 320)));
   }
-  .contacts__block-right-gps p {
-    font-size: calc(7px + (20 - 7) * ((100vw - 320px) / (1181 - 320)));
-  }
   .footer__box {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    max-width: 600px;
+    padding: 20px 0px 20px 20px;
+    max-width: 700px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    border: 1px solid red;
   }
   .footer__button {
     margin: 0px auto;
   }
   .footer__ip {
     width: 100%;
-    border: 1px solid red;
     font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
   }
   .footer__unp {
     width: 100%;
-    border: 1px solid red;
     font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
   }
   .footer__tel {
     width: 100%;
-    border: 1px solid red;
     font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
   }
   .footer__email {
     width: 100%;
-    border: 1px solid red;
     font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
   }
 }
@@ -1802,10 +1873,11 @@ body {
   .header__menu {
     position: absolute;
     left: -110%;
-    top: 107px;
+    top: 0px;
     background-color: #494a4d;
   }
   .header__menu ul {
+    background: url(/images/img/fon.jpg) center center/cover no-repeat;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1815,14 +1887,18 @@ body {
   .header__menu ul li {
     margin: 25px auto 25px;
   }
+  .header__menu ul li a {
+    font-size: 25px;
+  }
   .header .open-menu {
     left: 0%;
     z-index: 2;
   }
   .header__menu-burger {
     visibility: visible;
-    right: calc(50px + (70 - 50) * ((100vw - 320px) / (900 - 320)));
+    right: calc(10px + (70 - 10) * ((100vw - 320px) / (900 - 320)));
     top: 3px;
+    z-index: 2;
   }
   .header .open-menu-burger span {
     -webkit-transform: rotate(45deg);
@@ -1861,6 +1937,21 @@ body {
     min-height: 100px;
     margin: 0px auto;
   }
+  .objects__project {
+    height: auto;
+    margin: 0px auto;
+    text-align: center;
+    font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1181 - 320)));
+  }
+  .objects__project-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .objects__project-list ul {
+    width: 100%;
+  }
   .reviews__box-reviews {
     width: 100%;
     -webkit-box-orient: vertical;
@@ -1871,5 +1962,48 @@ body {
   .reviews__column {
     max-width: 820px;
     margin: 0px auto;
+  }
+  .contacts__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .contacts__block-left {
+    max-width: 900px;
+    width: 100%;
+    margin: 0px auto;
+  }
+  .contacts__block-left-blur {
+    max-width: 900px;
+    width: 100%;
+    height: 100%;
+    margin: 0px auto;
+  }
+  .contacts__block-right {
+    height: auto;
+    max-width: 900px;
+    width: 100%;
+    padding: auto 40px;
+  }
+  .contacts__block-right-blur {
+    height: 100%;
+    max-width: 900px;
+    width: 100%;
+    margin: 0px auto;
+  }
+  .contacts__block-image {
+    top: 40px;
+    right: calc(-40px + (60 - (-40)) * ((100vw - 520px) / (900 - 520)));
+  }
+  .footer__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__box {
+    text-align: center;
   }
 }
