--- a/style.scss
+++ b/style.scss
@@ -2,24 +2,21 @@
     font-family: 'Open Sans';
     src: url(/fonts/OpenSans.ttf);
 }
-
 * {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
-
-
 ul {
     list-style-type: none;
 }
-
-
+a {
+    text-decoration: none;
+}
 body {
     max-width: 1438px;
+    margin: 0px auto;
 }
-
-
 .container {
     max-width: 1181px;
     width: 100%;
@@ -27,8 +24,6 @@ body {
     margin: 0px auto;
     position: relative;
 }
-
-
 .header {
     width: 100%;
     height: 107px;
@@ -43,12 +38,20 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: calc(10px + (18 - 10) * ((100vw - 320px) / (1181 - 320)));
-            line-height: 25px;
-            color: #FFFFFF;
+            li {
+                padding-bottom: 5px;
+                a {
+                    font-family: 'Open Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: calc(10px + (18 - 10) * ((100vw - 320px) / (1181 - 320)));
+                    line-height: 25px;
+                    color: #FFFFFF;
+                }
+            }
+            li:hover {
+                border-bottom: 2px solid #FFFFFF;
+            }
         }
     }
     &__menu-burger {
@@ -58,8 +61,8 @@ body {
         position: absolute;
         top: 0px;
         right: 30px;
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         cursor: pointer;
     }
     &__menu-burger > span,
@@ -69,7 +72,7 @@ body {
         position: absolute;
         width: 100%;
         height: 5px;
-        background-color: rgb(122, 116, 21);
+        background-color: rgb(241, 240, 220);
         transition-duration: 0.25s;
     }
     &__menu-burger > span::before {
@@ -81,8 +84,6 @@ body {
         top: 20px;
     }
 }
-
-
 .one {
     max-width: 1438px;
     min-height: 901.84px;
@@ -99,13 +100,15 @@ body {
             max-width: 168px;
             width: 100%;
             height: 25px;
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 25px;
-            color: #FFFFFF;
             margin-left: 10px;
+            a {
+                font-family: 'Open Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 25px;
+                color: #FFFFFF;
+            }
         }
     }
     button {
@@ -121,6 +124,10 @@ body {
         text-transform: uppercase;
         color: #FFFFFF;
         margin-left: 16px;
+    }
+    button:active {
+        background-color: white;
+        color: black;
     }
     &__title {
         display: flex;
@@ -226,8 +233,6 @@ body {
         margin: 10px 29px;
     }
 }
-
-
 .why-me {
     width: 100%;
     &__box-why-me {
@@ -320,9 +325,8 @@ body {
 
     }
 }
-
-
 .services-and-prices {
+    position: relative;
     &__box-services-and-prices {
         position: relative;
         max-width: 978px;
@@ -366,7 +370,7 @@ body {
         height: 667px;
         position: absolute;
         top: -170px;
-        left: -130.25px;
+        left: 0px;
         opacity: 0.1;
     }
     &__box {
@@ -376,11 +380,10 @@ body {
         margin-bottom: 45px;
     }
     &__box-column {
-        
         width: 100%;
     }
     &__box-column-block {
-        min-height: 112px;
+        height: 112px;
         text-align: center;
         font-family: 'Open Sans';
         font-style: normal;
@@ -429,7 +432,7 @@ body {
         color: #267842;
     }
     &__term {
-        height: 49px;
+        min-height: 49px;
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: 700;
@@ -456,10 +459,12 @@ body {
             text-transform: uppercase;
             color: #FFFFFF;
         }
+        button:active {
+            background-color: #FFFFFF;
+            color:  #267842;
+        }
     }
 }
-
-
 .objects {
     &__title-box {
         display: flex;
@@ -484,7 +489,7 @@ body {
         margin-right: 20.3px;
     }
     &__project {
-        width: 641px;
+        max-width: 641px;
         height: 38px;
         font-family: 'Open Sans';
         font-style: normal;
@@ -518,8 +523,6 @@ body {
         }
     }
 }
-
-
 .order {
     &__linea {
         width: 261.03px;
@@ -624,10 +627,12 @@ body {
             text-transform: uppercase;
             color: #FFFFFF;
         }
+        button:active {
+            background-color: #FFFFFF;
+            color:  #267842;
+        }
     }
 }
-
-
 .order-works {
     position: relative;
     &__title-box {
@@ -725,10 +730,12 @@ body {
             text-transform: uppercase;
             color: #FFFFFF;
         }
+        button:active {
+            background-color: #FFFFFF;
+            color:  #267842;
+        }
     }
 }
-
-
 .examples {
     &__linea {
         width: 261.03px;
@@ -754,7 +761,7 @@ body {
                 -webkit-text-stroke: 2px #267842;
         }
         h3 {
-            width: 686px;
+            max-width: 686px;
             height: 95px;
             position: absolute;
             top: 102.5px;
@@ -793,8 +800,6 @@ body {
         }
     }
 }
-
-
 .reviews {
     &__linea {
         width: 261.03px;
@@ -810,7 +815,7 @@ body {
         margin: 120px 0px 78px auto;
         position: relative;
         h2 {
-            min-width: 621px;
+            max-width: 621px;
             width: 100%;
             font-family: 'Open Sans';
             font-style: normal;
@@ -821,7 +826,7 @@ body {
                 -webkit-text-stroke: 2px #267842;
         }
         h3 {
-            width: 686px;
+            max-width: 686px;
             height: 95px;
             position: absolute;
             top: 102.5px;
@@ -875,8 +880,6 @@ body {
         height: 20px;
     }
 }
-
-
 .about {
     &__linea {
         width: 261.03px;
@@ -901,7 +904,7 @@ body {
                 -webkit-text-stroke: 2px #267842;
         }
         h3 {
-            width: 686px;
+            max-width: 686px;
             height: 95px;
             position: absolute;
             top: 102.5px;
@@ -965,8 +968,6 @@ body {
         color: #1B1919;
     }
 }
-
-
 .contacts {
     &__linea {
         width: 261.03px;
@@ -991,7 +992,7 @@ body {
                 -webkit-text-stroke: 2px #267842;
         }
         h3 {
-            width: 686px;
+            max-width: 686px;
             height: 95px;
             position: absolute;
             top: 102.5px;
@@ -1040,27 +1041,13 @@ body {
         max-width: 480px;
         width: 100%;
         min-height: 487px;
-        border: 1px solid red;
-    }
-    &__block-left-blur {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        max-width: 480px;
-        width: 100%;
-        min-height: 487px;
-        background: linear-gradient(120.99deg, #267842 13.12%, rgba(38, 120, 66, 0.526106) 61.23%, rgba(38, 120, 66, 0.15) 93.12%, rgba(38, 120, 66, 0.2) 106.61%);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        opacity: 0.3;
+        position: relative;
     }
     &__block-left-box {
-        width: auto;
-        height: 100%;
-        margin: 0px auto;
+        width: 100%;
+        min-height: 487px;
         text-align: center;
-        position: relative;
         z-index: 2;
-        border: 1px solid red;
         h4 {
             max-width: 251px;
             width: 100%;
@@ -1109,6 +1096,17 @@ body {
             }
         }
     }
+    &__block-left-blur {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        max-width: 480px;
+        width: 100%;
+        min-height: 487px;
+        background: linear-gradient(120.99deg, #267842 13.12%, rgba(38, 120, 66, 0.526106) 61.23%, rgba(38, 120, 66, 0.15) 93.12%, rgba(38, 120, 66, 0.2) 106.61%);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        opacity: 0.3;
+    }
     &__block-left-button {
         margin: 30px auto 0px;
         text-align: center;
@@ -1125,15 +1123,20 @@ body {
             text-transform: uppercase;
             color: #FFFFFF;
         }
+        button:active {
+            background-color: #FFFFFF;
+            color:  #267842;
+        }
     }
     &__block-right {
-        width: 701px;
+        max-width: 701px;
+        width: 100%;
         min-height: 487px;
         position: relative;
-        padding: 58.5px 144px 209.5px 207.22px;
+        padding: 58px 144px 209px 207px;
         p {
             max-width: 295px;
-            height: 54px;
+            min-height: 54px;
             font-family: 'Open Sans';
             font-style: normal;
             font-weight: 400;
@@ -1158,7 +1161,7 @@ body {
         margin-top: 26px;
         p {
             max-width: 200px;
-            height: 22px;
+            min-height: 22px;
             font-family: 'Open Sans';
             font-style: normal;
             font-weight: 700;
@@ -1244,8 +1247,6 @@ body {
         background: url(/images/icons/bottom-block2.png) center center/cover no-repeat;
     }
 }
-
-
 .footer {
     width: 100%;
     min-height: 198px;
@@ -1270,6 +1271,10 @@ body {
             line-height: 25px;
             text-transform: uppercase;
             color: #FFFFFF;
+        }
+        button:active {
+            background-color: #FFFFFF;
+            color:  #267842;
         }
     }
     &__box {
@@ -1303,12 +1308,14 @@ body {
     &__tel {
         width: 168px;
         height: 25px;
-        font-family: 'Open Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 25px;
-        color: #FFFFFF;
+        a {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 25px;
+            color: #FFFFFF;
+        }
     }
     &__email {
         width: 191px;
@@ -1344,6 +1351,7 @@ body {
     }
     .why-me {
         &__linea {
+            top: 200px;
             left: 0px;
         }
         &__benefits {
@@ -1352,7 +1360,7 @@ body {
         &__box-why-me {
             text-align: center;
             h2 {
-                font-size: calc(80px + (140 - 80) * ((100vw - 320px) / (1181 - 320)));
+                font-size: calc(60px + (140 - 60) * ((100vw - 320px) / (1181 - 320)));
             }
             h3 {
                 font-size: calc(40px + (70 - 40) * ((100vw - 320px) / (1181 - 320)));
@@ -1361,10 +1369,14 @@ body {
         }
     }
     .services-and-prices {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-services-and-prices {
             text-align: center;
             h2 {
-                font-size: calc(50px + (130 - 50) * ((100vw - 320px) / (1181 - 320)));
+                font-size: calc(40px + (130 - 40) * ((100vw - 320px) / (1181 - 320)));
             }
             h3 {
                 font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
@@ -1388,13 +1400,17 @@ body {
         }
     }
     .order {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-order {
             text-align: center;
             h2 {
                 font-size: calc(50px + (140 - 50) * ((100vw - 320px) / (1181 - 320)));
             }
             h3 {
-                font-size: calc(40px + (70 - 40) * ((100vw - 320px) / (1181 - 320)));
+                font-size: calc(30px + (70 - 30) * ((100vw - 320px) / (1181 - 320)));
                 left: 0px;
             }
         }
@@ -1404,12 +1420,12 @@ body {
             h3 {
                 max-width: 904.23px;
                 width: 100%;
-                height: 190px;
+                height: auto;
                 font-family: 'Open Sans';
                 font-style: normal;
                 font-weight: 400;
-                font-size: calc(25px + (70 - 25) * ((100vw - 320px) / (1181 - 320)));
-                line-height: 95px;
+                font-size: calc(20px + (70 - 20) * ((100vw - 320px) / (1181 - 320)));
+                line-height: 45px;
                 color: #1B1919;
                 margin-bottom: 60px;
                 span {
@@ -1422,6 +1438,10 @@ body {
         }
     }
     .examples {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-order {
             text-align: center;
             h2 {
@@ -1434,6 +1454,10 @@ body {
         }
     }
     .reviews {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-order {
             text-align: center;
             h2 {
@@ -1446,6 +1470,10 @@ body {
         }
     }
     .about {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-order {
             text-align: center;
             h2 {
@@ -1486,6 +1514,10 @@ body {
         }
     }
     .contacts {
+        &__linea {
+            top: 200px;
+            left: 0px;
+        }
         &__box-order {
             text-align: center;
             h2 {
@@ -1498,44 +1530,35 @@ body {
         }
 
         &__block-right {
+            padding-top: calc(150px + (58 - 150) * ((100vw - 320px) / (1181 - 320)));
             padding-left: calc(5px + (207 - 5) * ((100vw - 320px) / (1181 - 320)));
             padding-right: calc(2px + (144 - 2) * ((100vw - 320px) / (1181 - 320)));
         }
-        &__block-right-gps {
-            p {
-                font-size: calc(7px + (20 - 7) * ((100vw - 320px) / (1181 - 320)));
-            }
-        }
+        
     }
     .footer {
         &__box {
-            padding-top: 10px;
-            padding-bottom: 10px;
-            max-width: 600px;
+            padding: 20px 0px 20px 20px;
+            max-width: 700px;
             flex-direction: column;
-            border: 1px solid red;
         }
         &__button {
             margin: 0px auto;
         }
         &__ip {
             width: 100%;
-            border: 1px solid red;
             font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
         }
         &__unp {
             width: 100%;
-            border: 1px solid red;
             font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
         }
         &__tel {
             width: 100%;
-            border: 1px solid red;
             font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
         }
         &__email {
             width: 100%;
-            border: 1px solid red;
             font-size: calc(15px + (25 - 15) * ((100vw - 320px) / (1181 - 320)));
         }
     }
@@ -1546,13 +1569,17 @@ body {
         &__menu {
             position: absolute;
             left: -110%;
-            top: 107px;
+            top: 0px;
             background-color: rgb(73, 74, 77);
             ul {
+                background: url(/images/img/fon.jpg) center center/cover no-repeat;
                 flex-direction: column;
                 font-size: 30px;
                 li {
                     margin: 25px auto 25px;
+                    a {
+                        font-size: 25px;
+                    }
                 }
             }
         }
@@ -1562,8 +1589,9 @@ body {
         }
         &__menu-burger {
             visibility: visible;
-            right: calc(50px + (70 - 50) * ((100vw - 320px) / (900 - 320)));
+            right: calc(10px + (70 - 10) * ((100vw - 320px) / (900 - 320)));
             top: 3px;
+            z-index: 2;
         }
         .open-menu-burger {
             span {
@@ -1598,6 +1626,20 @@ body {
             margin: 0px auto;
         }
     }
+    .objects {
+        &__project {
+            height: auto;
+            margin: 0px auto;
+            text-align: center;
+            font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1181 - 320)));
+        }
+        &__project-list {
+            flex-direction: column;
+            ul {
+                width: 100%;
+            }
+        }
+    }
     .reviews {
         &__box-reviews {
             width: 100%;
@@ -1606,6 +1648,47 @@ body {
         &__column {
             max-width: 820px;
             margin: 0px auto;
+        }
+    }
+    .contacts {
+        &__block {
+            flex-direction: column;
+            height: auto;
+        }
+        &__block-left {
+            max-width: 900px;
+            width: 100%;
+            margin: 0px auto;
+        }
+        &__block-left-blur {
+            max-width: 900px;
+            width: 100%;
+            height: 100%;
+            margin: 0px auto;
+        }
+        &__block-right {
+            height: auto;
+            max-width: 900px;
+            width: 100%;
+            padding: auto 40px;
+        }
+        &__block-right-blur {
+            height: 100%;
+            max-width: 900px;
+            width: 100%;
+            margin: 0px auto;
+        }
+        &__block-image {
+            top: 40px;
+            right: calc(-40px + (60 - (-40)) * ((100vw - 520px) / (900 - 520)));
+        }
+    }
+    .footer {
+        &__block {
+            flex-direction: column;
+        }
+        &__box {
+            text-align: center;
         }
     }
 }
